K8/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: brief
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: api
