K8/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: brief
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql
