K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: brief
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /brief(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
